# scene3d

./: .gitignore  .gitmodules  README.md
cpp/: .gitignore  CMakeLists.txt
cpp/apps/: CMakeLists.txt  depth2mesh_perspective.cc  extract_frustum_mesh.cc  find_floor_height.cpp  generate_gt_mesh.cc  gt_coverage.cc  mesh2obj.cc  pred_recon.cc  render.cpp  render_suncg.cpp
cpp/ctypes/: CMakeLists.txt  depth_mesh_utils_ctypes.cc  epipolar_transform.cc  training_utils.cc
cpp/lib/: CMakeLists.txt  benchmark.cc  benchmark.h  camera.cc  camera.h  common.h  depth.h  depth_mesh_utils.cc  depth_mesh_utils.h  depth_render_utils.h  epipolar.cc  epipolar.h  file_io.cc  file_io.h  mesh.h  meshdist.cc  meshdist.h  multi_layer_depth_renderer.cc  multi_layer_depth_renderer.h  pcl.cc  pcl.h  ray_mesh_intersection.cc  ray_mesh_intersection.h  ray_mesh_intersection_cgal.cc  ray_mesh_intersection_cgal.h  string_utils.h  suncg_utils.cc  suncg_utils.h  vectorization_utils.h
cpp/scripts/: build_all.sh  render_suncg_demo.sh  run_all_tests.sh
cpp/tests/: CMakeLists.txt  camera_test.cc  depth_render_utils_test.cc  depth_renderer_test.cc  epipolar_test.cc  pcl_test.cc  ray_tracing_test.cc  suncg_utils_test.cc  test_main.cc
docker/: Dockerfile
docs/: commands.txt  dataset.md  multi_layer_depth.md
grid_brown/: single_driver.sh  single_submit.sh
python/: environment.yml
python/scene3d/: camera.py  camera2.py  category_mapping.py  cluster_utils.py  config.py  data_utils.py  depth_mesh_utils_cpp.py  epipolar.py  evaluation.py  exec_utils.py  feat.py  geom2d.py  geom3d.py  io_utils.py  log.py  loss_fn.py  mve.py  notebook_utils.py  pbrs_utils.py  pipeline_overhead.py  render_depth.py  scannet_utils.py  shards.py  suncg_utils.py  torch_utils.py  train_eval_pipeline.py  train_eval_pipeline_v9.py  training_utils_cpp.py  transforms.py  visualizer.py  viz.py  voxel.py
python/scene3d/dataset/: dataset_utils.py  v1.py  v2.py  v3.py  v4.py  v5.py  v6.py  v7.py  v8.py  v9.py
python/scene3d/eval/: f3d_utils.py  generate_gt_mesh.py  gt_coverage.py  post_processing.py  pred_recon.py
python/scene3d/net/: deeplab.py  unet.py  unet_no_bn.py  unet_overhead.py
python/scratch/: check_etn_file_transfer.py  find_examples_with_no_gt_objects_or_background.py  generate_dataset.py  generate_dataset_single.py  inspect_sunsc_json.py  shard_find_missing.py  test_logging.py
python/scripts/: check_data_integrity.py  checkpoint_metadata.py  compute_floor_height.py  evaluate_overhead_params3.py  evaluate_overhead_params4.py  generate_dataset.py  generate_gt_meshes.py  generate_overhead_features.py  generate_overhead_features_extra.py  generate_overhead_features_new.py  generate_projection_based_voxelization.py  make_predicted_meshes.py  make_scannet_prediction_meshes.py  overhead_features_move_shard.py  run_feature_transform.py  run_pr_curve_evaluation.py  run_voxel_iou_evaluation.py  train.py  transform_factored3d_meshes.py
python/web/: app.py
resources/: house_ids.txt
resources/depth_render/: cam.txt  cam0_19201080  dummy.json  dummy_ModelCategoryMapping.csv  house_obj_camera.txt
resources/depth_render/0004d52d1aeeb8ae6de39d6bd993e992/: 000000_aabb.txt  000000_cam.txt  000003_aabb.txt  000003_cam.txt
resources/depth_render/915a66f48ec925febf644f962375720d/: 000000_aabb.txt  000000_cam.txt
resources/gt_generation/0004d52d1aeeb8ae6de39d6bd993e992/: 000000_objects.ply  000001_objects.ply  cameras.txt
resources/house/0004d52d1aeeb8ae6de39d6bd993e992/: camera.txt  house_p.json
resources/house/915a66f48ec925febf644f962375720d/: camera.txt  house_p.json
tools/: sync.sh
